fix: if there are many tabs, the scrollbar will appear large

--- a/src/components/scrollable/style.scss
+++ b/src/components/scrollable/style.scss
@@ -20,6 +20,6 @@ $react-custom-scrollbars: '.ScrollbarsCustom';
     &-Scroller,
     &-Content,
     &-Wrapper {
-        height: 100%;
+        //height: 100%;
     }
 }
